Closes #5640 - Normalized approach to numeric inputs to fix cross-browser inconsistency with input spinners. - Fixed layout problem in `Datetime.vue` component due to numeric input spinners changes.

--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -342,16 +342,17 @@ input[type=password],
 input[type=date],
 textarea {
     @include reactive-input();
-    padding: $inputTextP;
     &.numeric {
         text-align: right;
     }
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    margin-right: -5px !important;
-    margin-top: -1px !important;
+input[type=text],
+input[type=search],
+input[type=password],
+input[type=date],
+textarea {
+    padding: $inputTextP;
 }
 
 .c-input {
